--- a/To-Do-App/appsettings.json
+++ b/To-Do-App/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=INEICP-AS-L471\\SQLEXPRESS;Database=ToDoApp;Trusted_Connection=True,MultipleActiveResultSets=True"
+  }
 }
