Added Migrations and Filters Class

--- a/To-Do-App/appsettings.json
+++ b/To-Do-App/appsettings.json
@@ -1,4 +1,4 @@
-{
+ {
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=INEICP-AS-L471\\SQLEXPRESS;Database=ToDoApp;Trusted_Connection=True,MultipleActiveResultSets=True"
+    "DefaultConnection": "Server=INEICP-AS-L471\\SQLEXPRESS;Database=ToDoApp;Trusted_Connection=True;MultipleActiveResultSets=True;TrustServerCertificate=True"
   }
 }
